# ir-sinkhole

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  HOWTO.md  TECHNICAL.md  systemd-example.md
scripts/: ir-sinkhole-menu.sh  run.sh
scripts/examples/: check-infection-orderbuddy.sh
src/ir_sinkhole/: __init__.py  capture.py  config.py  dns_sinkhole.py  firewall.py  main.py  replay.py  sinkhole.py
tests/: test_capture.py  test_replay.py
