[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ir-sinkhole"
version = "1.0.0"
description = "Incident Response Sinkhole — containment without triggering malware disconnect behaviors"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "IR Sinkhole Contributors" }]
keywords = ["incident-response", "forensics", "sinkhole", "containment", "malware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "scapy>=2.5.0",
    "async-timeout>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.scripts]
ir-sinkhole = "ir_sinkhole.main:main"

[tool.setuptools.packages.find]
where = ["src"]
